--- a/app/public/home.html
+++ b/app/public/home.html
@@ -27,7 +27,7 @@
     </div>
     <footer class="footer">
       <a href="/api/friends">API Friends List</a> |
-      <a href="/api/github">GitHub Repo</a>
+      <a href="https://github.com/rayovims/Friend_Finder">GitHub Repo</a>
     </footer>
   </div>
 </body>
